[workspace]
members = [
        "contracts/interface",
        "contracts/groth16-verifier",
        "contracts/risc0-router",
        "contracts/mock-verifier",
        "tools/build-utils"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/stellar-risc0-verifier"
license = "Apache-2.0"

[workspace.dependencies]
ark-bn254 = "=0.4.0"
ark-ec = "=0.4.2"
ark-ff = "=0.4.2"
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", branch = "release/v25-preview" }
ark-serialize = "=0.4.2"
hex = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
stellar-access = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.6.0" }
stellar-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.6.0" }

build-utils = { path = "tools/build-utils" }
risc0-interface = { path = "contracts/interface"}

[patch.crates-io]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", branch = "release/v25-preview" }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
